--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "prettier": "^2.7.1"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
+    "src/**/*.{ts,tsx}": [
       "yarn eslint",
       "yarn prettier --write",
       "yarn test --watchAll=false --findRelatedTests --bail"
