--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,3 @@
 {
-    "*.{ts,tsx}": ["tslint --fix --config tslint.precommit.json --project tsconfig.json", "git add"]
-  }
+    "*.{ts,tsx}": ["tslint --fix --config tslint.precommit.json --project tsconfig.json"]
+}
